<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/linearLayout2"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="16dp">

    <ImageView
        android:id="@+id/dream_photo"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:background="#3F51B5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:srcCompat="@tools:sample/avatars" />

    <TextView
        android:id="@+id/dream_title_label"
        style="?android:listSeparatorTextViewStyle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="7dp"
        android:text="@string/dream_title_label"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/dream_photo"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/dream_title_text"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="7dp"
        android:hint="@string/dream_title_hint"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/dream_photo"
        app:layout_constraintTop_toBottomOf="@+id/dream_title_label" />


    <CheckBox
        android:id="@+id/dream_fulfilled_checkbox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/dream_fulfilled_label"
        app:layout_constraintStart_toStartOf="@+id/dream_title_text"
        app:layout_constraintTop_toBottomOf="@+id/dream_title_text" />

    <CheckBox
        android:id="@+id/dream_deferred_checkbox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="294dp"
        android:layout_marginLeft="294dp"
        android:text="@string/dream_deferred_label"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/dream_title_text" />


    <TextView
        android:id="@+id/dream_entries_label"
        style="?android:listSeparatorTextViewStyle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/dream_entries_label"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/dream_fulfilled_checkbox" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/dream_entry_recycler_view"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/dream_entries_label" />
    <!--    </LinearLayout>-->


    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/add_reflection_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="7dp"
        android:layout_marginBottom="7dp"
        android:contentDescription="Add New Entry"
        android:src="@android:drawable/ic_input_add"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>


